Added all the groups data to the required variables

--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Thomas Anderson", "Daisy Luczaj", "Andrew Wright", 
+           "Theo Sales", "Zach Zhao" , "Zaki Mulube"),
+  github_username = c("ThomasBAnderson", "DaisyLuczaj","AndrewW705",
+                      "salestheo", "555BigHamsome","Zaki-Mulube"), 
+  colour = c("darkgreen","pink","turquoise", "powderblue", 
+             "red", "orange"),
+  hobby = c("Rugby", "Reading", "Climbing", 
+            "Kayaking", "Basketball", "Music"),
+  favourite_number = c(3, 7, 5, 3, 2, 64)
   )
 
 team_data
@@ -54,9 +54,9 @@ p1
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "Name of Person", 
+          y = "Favourite Number",
+          title = "Bar Chart of Favourite Numbers")
 ```
 
 *Remove this text (including the stars), and add your answer for Exercise 19 here.*
